--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation platform('com.google.firebase:firebase-bom:33.8.0')
     implementation 'com.google.firebase:firebase-auth:22.3.1'
+    implementation 'com.google.android.gms:play-services-auth:21.0.0'
 }
