--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -43,4 +45,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "androidx.navigation:navigation-fragment:2.8.6"
+    implementation "androidx.navigation:navigation-ui:2.8.6"
+
 }
