--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.navigation:navigation-fragment:2.8.6"
     implementation "androidx.navigation:navigation-ui:2.8.6"
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
 }
