--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.8.6"
     implementation "androidx.navigation:navigation-ui:2.8.6"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 }
