--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:2.8.6"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    //Room
+    implementation ("androidx.room:room-runtime:2.6.1")
+    annotationProcessor("androidx.room:room-compiler:2.6.1")
 
 }
