--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -52,5 +52,9 @@ dependencies {
     //Room
     implementation ("androidx.room:room-runtime:2.6.1")
     annotationProcessor("androidx.room:room-compiler:2.6.1")
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    //implementation "com.google.android.material:material:1.11.0"
+
 
 }
