--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -48,12 +48,15 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.8.6"
     implementation "androidx.navigation:navigation-ui:2.8.6"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    //Room
     implementation ("androidx.room:room-runtime:2.6.1")
     annotationProcessor("androidx.room:room-compiler:2.6.1")
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    implementation "androidx.room:room-rxjava3:2.6.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
     //implementation "com.google.android.material:material:1.11.0"
 
 
