--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation "androidx.room:room-rxjava3:2.6.1"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "com.airbnb.android:lottie:3.4.0"
+    implementation("com.google.firebase:firebase-database")
     //implementation "com.google.android.material:material:1.11.0"
 
 
