--- a/AndroidJava/app/src/main/AndroidManifest.xml
+++ b/AndroidJava/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,12 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidJava"
         tools:targetApi="31">
-        <activity
-            android:name=".allpages.search.view.searchFargment"
-            android:exported="false" />
-        <activity
-            android:name=".allpages.plan.view.plansFragment"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".allpages.search.view.searchFragment"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".allpages.plan.view.plansFragment"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
