--- a/AndroidJava/app/build.gradle
+++ b/AndroidJava/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
     implementation "com.airbnb.android:lottie:3.4.0"
     implementation("com.google.firebase:firebase-database")
+    implementation 'com.google.android.material:material:1.9.0'
     //implementation "com.google.android.material:material:1.11.0"
 
 
